--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #27ae60;
   --dark: #2c3e50;
-  --light: #f5f6fa;
+  --light: #c2ccf3;
 }
 
 body {
@@ -48,25 +48,25 @@ header p {
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
-  gap: 2rem;
-  padding: 2rem;
+  gap: 5rem;
+  padding: 4rem;
   max-width: 3000px;
   margin: auto;
 }
 
 
 .card {
-  background: #fff;
-  border-radius: 12px;
+  background: #b7d3d3;
+  border-radius: 25px;
   overflow: hidden;
-  box-shadow: 0px 4px 12px rgba(0,0,0,0.12);
+  box-shadow: 0px 4px 20px rgba(54, 53, 53, 0.12);
   transition: transform .25s ease;
   min-height: 800px;
   padding-bottom: 2rem;
   display: inline-block;
   width: 700px;
   height: auto;
-  margin: 10px;
+  margin: 50px;
   padding: 15px;
   border: 1px;
 }
@@ -160,13 +160,13 @@ header p {
   margin: 20px auto;           /* centrado con espacio alrededor */
   padding: 20px;               /* espacio interno */
   border: 1px solid #ccc;      /* borde suave */
-  border-radius: 10px;         /* esquinas redondeadas */
+  border-radius: 40px;         /* esquinas redondeadas */
   background: #fdfdfd;         /* fondo claro */
   box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* sombra ligera */
 }
 
 .card.about h2 {
-  font-size: 1.9rem;           /* título más grande */
+  font-size: 2.1rem;           /* título más grande */
   color: #2c3e50;              /* gris oscuro elegante */
   margin-bottom: 15px;
   text-align: center;          /* centrado */
