--- a/styles.css
+++ b/styles.css
@@ -60,19 +60,22 @@ header p {
   border-radius: 25px;
   overflow: hidden;
   box-shadow: 0px 4px 20px rgba(54, 53, 53, 0.12);
-  transition: transform .25s ease;
+  transition: all 0.3s ease;
   min-height: 800px;
-  padding-bottom: 2rem;
+  padding: 15px;
   display: inline-block;
   width: 700px;
   height: auto;
   margin: 50px;
-  padding: 15px;
-  border: 1px;
+  border: 1px solid #ccc;
 }
 
 .card:hover {
-  transform: translateY(-7px);
+  transform: translateY(-7px) scaleX(1.3) scaleY(1.0);
+  background: #51dfdf;       /* nuevo color al hacer hover */
+  min-height: unset;
+  max-height: fit-content;
+  padding-bottom: 0;
 }
 
 .card img {
